mule-sdk/v/1.0/parameter-layout.adoc
= 自定义参数UI

SDK提供了一组注释，用于定制UI和UX的许多方面。

==  @ DisplayName的

指定要在UI中使用的元素或字段的自定义标签。

==  @实施例

有时候，提供一个参数可以采用的值的简单示例很有帮助。

[source, java, linenums]
----
@Parameter
@Example("0.0.0.0")
private String port;
----

该参数将呈现为：

image::parameters/example.png[例]

==  @摘要

`@Summary`用于简要说明参数的用途。

例如，可以在设计中心中将此说明用作悬停在参数上时要显示的文本：

[source, java, linenums]
----
@Parameter
@Optional(defaultValue = "SECONDS")
@Summary("Time unit to be used in the Connection Timeout")
private TimeUnit connectionTimeoutUnit;
----

该参数将呈现如下所示：

image::parameters/summary.png[摘要工具提示]

==  @放置

此注释使您可以配置这些设置：

* 定义参数的组中的相对顺序。该值是相对的，因为具有顺序`10`的元素高于具有值`25`的元素。

* 选项卡，这是一种将参数组合在一起的图形方式。此属性指定参数应显示在其中的选项卡的名称。它使用默认的"General"是没有指定名称。要在同一选项卡中显示多个参数或字段，该选项卡的值应该与所有参数相同。

在以下示例中，`foo`和`bar`将被分组到名为`Advanced`的相同标签中，而`foobar`将成为默认标签中的唯一参数。

[source, java, linenums]
----
@Parameter
@Placement(order = 1, tab="Advanced")
private String foo;

@Parameter
@Placement(order = 2, tab="Advanced")
private String bar;

@Parameter
private String foobar;
----

`foo`和`bar`参数将以如下格式显示在新标签`"Advanced"`中：

image::parameters/placement-tab.png[标签]

==  @文本

表示参数支持UI中的多行字符串输入。此注释还影响DSL，使带注释的参数成为子元素，其中文本作为元素的内容。

请注意，此批注仅应用于`String`类型的参数。

。例
[source, java, linenums]
----
@Parameter
@Optional
@Text
@DisplayName("SQL Query Text")
private String sql;
----

在Design Center中，`@Text`将呈现如下形式：

image::parameters/text.png[文本大输入]

`@Text`也会影响包含该参数的元素的DSL。使用它会创建一个接受`CDATA`内容的子元素。例如，假设你有这个操作：

[source, java, lineums]
----
public void execute(String message) { ... }
----

上述操作的DSL如下所示：

[source, xml, lineums]
----
<example:execute message="This is a pretty inline message!"/>
----

本示例使用`@Text`注释`message`操作参数：

[source, java, lineums]
----
public void execute(@Text String message) { ... }
----

所以相应的DSL看起来像这样：

[source, xml, lineums]
----
<example:execute>
    <example:message>
       <![CDATA[ This is a pretty CDATA message! ]]>
    </example:message>
</example:execute>
----

==  @路径

将参数标记为文件或目录的路径。该参数将作为文件选择器字段显示在用户界面中。

请注意，此批注仅应用于`String`类型的参数。

该注释包含以下信息：

*  `type`：路径是指向目录，文件还是其中的任何一个。
*  `acceptsUrls`：路径参数是否支持URL。
*  `acceptedFileExtensions`：此参数可以处理的文件扩展名列表。

本示例接受可以是远程的`.txt`资源：

[source, java, lineums]
----
@Parameter
@Path(type = FILE, acceptedFileExtensions = "txt", acceptsUrls = true)
private String resourcePath;
----

==  @密码

指示从UI填充参数时需要将其屏蔽。

请注意，此批注仅应用于`String`类型的参数。

。在UI中的示例
image::parameters/password.png[密码输入]

== 整合在一起

本例使用上面解释的功能：

[source, java, lineums]
----
@Parameter
@Placement(order = 3, tab="Additional information")
@Example("My name is Max the Mule and I love MuleSoft!")
@DisplayName("User biography")
@Summary("Information related to the user\'s life")
@Text
private String biography;
----
